syntax = "proto3";

import "google/protobuf/empty.proto";
import "gogoproto/gogo.proto";

package versionpb;

message Version {
  uint32 major = 1;
  uint32 minor = 2;
  uint32 micro = 3;
  string additional = 4;
}

message ClusterInfo {
  string id = 1 [(gogoproto.customname) = "ID"];
}

service API {
  rpc GetVersion(google.protobuf.Empty) returns (Version) {}
  rpc GetClusterInfo(google.protobuf.Empty) returns (ClusterInfo) {}
}
